--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,12 @@
 {
+  "name": "external_class_repo_test",
   "tasks": {
     "dev": "deno run --watch main.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
+  },
+  "exports": {
+    ".": "./main.ts"
   }
 }
