--- a/deno.json
+++ b/deno.json
@@ -2,7 +2,7 @@
   "name": "external_class_repo_test",
   "version": "0.0.1",
   "tasks": {
-    "dev": "deno run --watch main.ts"
+    "dev": "deno run --watch --allow-all main.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
